poc/tests/errors/test_FplMalformedNamespace_03.fpl
MalformedNamespace.Test1.Test2.MalformedNamespace
{
    theory
    {
    }
}

##############################
FplMalformedNamespace:1:1: The namespace MalformedNamespace.Test1.Test2.MalformedNamespace should consist of different names.